--- a/week4/Week_4.ipynb
+++ b/week4/Week_4.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "## Task\n",
     "What we want to do now is finding a decision boundary which owns the largest distance of margins:\n",
-    "$$min_{w} \\frac{1}{||w||^2} \\ subject \\ to \\ (w^TX+b)^TY \\geq 1$$"
+    "$$min_{w} \\frac{1}{2}||w||^2 \\ subject \\ to \\ (w^TX+b)^TY \\geq 1$$"
    ]
   },
   {
