--- a/week4/Week_4.ipynb
+++ b/week4/Week_4.ipynb
@@ -66,7 +66,7 @@
     "$$\\ell(w,a)=\\frac{1}{2}||w||^2 - \\sum_i a_i(y_i(w^Tx_i+b)-1)$$\n",
     "\n",
     "Solve:\n",
-    "$$\\frac{\\alpha \\ell(w,a)}{\\alpha w}=0 \\to w = \\sum_i^l a_iy_ix_i, \\ x_i \\in {SV}$$\n",
+    "$$\\frac{\\partial \\ell(w,a)}{\\partial w}=0 \\to w = \\sum_i^l a_iy_ix_i, \\ x_i \\in {SV}$$\n",
     "\n",
     "$l$ is the number of support vectors (note: sometimes, you may see $n$ instead of $l$, because $a_i=0$ for the samples not on the marginal boundaries)\n",
     "\n",
