--- a/week4/Week_4.ipynb
+++ b/week4/Week_4.ipynb
@@ -63,10 +63,10 @@
     "## Derivative Task by \"Lagrange Multiplier\"\n",
     "\n",
     "Minimize:\n",
-    "$$\\ell(w,a)=\\frac{1}{2}||w||^2 - \\sum_i a_i(y_i(w^Tx_i+b)-1)$$\n",
+    "$$\\ell(w,b,a)=\\frac{1}{2}||w||^2 - \\sum_i a_i(y_i(w^Tx_i+b)-1)$$\n",
     "\n",
     "Solve:\n",
-    "$$\\frac{\\partial \\ell(w,a)}{\\partial w}=0 \\to w = \\sum_i^l a_iy_ix_i, \\ x_i \\in {SV}$$\n",
+    "$$\\frac{\\partial \\ell(w,b,a)}{\\partial w}=0 \\to w = \\sum_i^l a_iy_ix_i, \\ x_i \\in {SV}$$\n",
     "\n",
     "$l$ is the number of support vectors (note: sometimes, you may see $n$ instead of $l$, because $a_i=0$ for the samples not on the marginal boundaries)\n",
     "\n",
@@ -85,6 +85,111 @@
     "\n",
     "Bounding True Error: silde 31,week4_a, TU Delft CS4220"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Error Estimation\n",
+    "\n",
+    "By leave-one-out cross validation, the true error can be bounded by: $\\varepsilon_{LOO} \\le \\frac{\\# support \\ vectors}{N}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# for Linear Nonseparable Question"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adding Slack\n",
+    "<img src=\"./week4_figure/outlier1.png\" width=\"75%\">\n",
+    "\n",
+    "<br>For linear separable one: $$(w^TX+b)^TY \\geq 1$$\n",
+    "\n",
+    "<br>We can make the marginal boundaries more flexible for <b>some of the points</b>: $$(w^Tx_i+b)^Ty_i \\geq 1-\\xi_i,\\ i={1,2,...n}$$\n",
+    "\n",
+    "or\n",
+    "\n",
+    "$$(w^TX+b)^TY \\geq 1-\\xi$$\n",
+    "\n",
+    "<br>slack variable $\\xi$:</br>\n",
+    "* large slack variable like (a), $\\xi_i \\ge 1$\n",
+    "* small slack variable like (b), $1 > \\xi_i > 0$\n",
+    "* no slack variable for the correct points, $\\xi_i = 0$\n",
+    "* 软误差(sum of the slack variable. they can be ragarded as a kind of error, as we ingore/misclassify them in order to build our margianl boundaries), $\\sum_i^n \\xi$\n",
+    "* panalty, C to constarin the slack\n",
+    "\n",
+    "<br> new model: \n",
+    "$$\n",
+    "min \\frac{1}{2}||w||^2+C\\sum_i^n \\xi_i\n",
+    "\\\\\n",
+    "s.t. (w^TX+b)^TY \\geq 1-\\xi\n",
+    "\\\\\n",
+    "\\xi_i \\ge 0, \\ for i={1,2,...,n}\n",
+    "$$\n",
+    "\n",
+    "<br> new optimization problem:\n",
+    "$$\n",
+    "max_{\\alpha} \\sum_{i=1}^n \\alpha_i - \\frac{1}{2} \\sum_{i,j=1}^n \\alpha_i \\alpha_j y_i y_j x_i^T x_j\n",
+    "\\\\\n",
+    "s.t. 0 \\le \\alpha_i \\le C\n",
+    "\\\\\n",
+    "\\sum_{j=1}^m \\alpha_i y_i =0\n",
+    "$$\n",
+    "\n",
+    "$$\\to f(X) = w^TX+b = (\\sum_{i=1}^n a_iy_ix_i)^TX + b$$\n",
+    "\n",
+    "<br>reference: https://blog.csdn.net/guoziqing506/article/details/81120354"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mapping To A Higher Dimenssion\n",
+    "\n",
+    "![avator](./week4_figure/projection.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kernal Function\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "max_{\\alpha} \\sum_{i=1}^n \\alpha_i - \\frac{1}{2} \\sum_{i,j=1}^n \\alpha_i \\alpha_j y_i y_j x_i^T x_j\n",
+    "\\\\\n",
+    "s.t. 0 \\le \\alpha_i \\le C\n",
+    "\\\\\n",
+    "\\sum_{j=1}^m \\alpha_i y_i =0\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "f(z) = \\sum_{i=1}^n a_iy_iK(x_i,z) + b\n",
+    "$$\n",
+    "\n",
+    "<br> brilliant video provided by MIT: </br>\n",
+    "<br>https://www.youtube.com/watch?v=_PwhiWxHK8o&ab_channel=MITOpenCourseWare"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
