--- a/week3/Week_3.ipynb
+++ b/week3/Week_3.ipynb
@@ -1195,7 +1195,7 @@
    "metadata": {},
    "source": [
     "(c)\n",
-    "<br> I don't know what does the question mean. It is stupid to judge it from a confusion matrix. Why not observe it from the feature learning curve?"
+    "<br> I don't know what does the question mean. Why should I judge it from a confusion matrix, and why not observe it from the feature learning curve?"
    ]
   },
   {
